--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,23 @@ html {
   box-sizing: inherit;
 }
 
+html {
+  display: inline-block;
+  background-color: #f0eee8;
+}
+
 article {
+  display: inline-block;
   font-family: Georgia, serif;
+  color: #512200;
+  background-color: #dcd4cd;
+  border: 3px solid #9a816d;
+  border-radius: 8px;
 }
 
 h2 {
-  font-family: "Dosis", sans-serif;
+  display: inline-block;
+  font-family: Dosis, sans-serif;
+  line-height: 1.5;
+  margin: 0;
 }
