--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,87 @@
 html {
   box-sizing: border-box;
+  display: inline-block;
+  background-color: #f0eee8;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
-html {
-  display: inline-block;
-  background-color: #f0eee8;
-}
-
-article {
+.link-card {
   display: inline-block;
   font-family: Georgia, serif;
   color: #512200;
   background-color: #dcd4cd;
   border: 3px solid #9a816d;
   border-radius: 8px;
+  line-height: 1.5;
+  text-decoration: none;
 }
 
-h2 {
+.link-card h2 {
   display: inline-block;
   font-family: Dosis, sans-serif;
   line-height: 1.5;
   margin: 0;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding-left: 1rem;
+  padding-top: .6rem;
+  padding-bottom: 0;
+}
+
+.one {
+  margin-top: .6rem;
+  margin-left: 1rem;
+  margin-bottom: 0;
+}
+
+.two {
+  margin-top: 0;
+  margin-left: 1rem;
+}
+
+.category {
+  display: inline-block;
+  font-size: .875rem;
+
+}
+
+.type {
+  display: inline-block;
+  margin-top: 1.301em;
+  padding-left: 2em;
+  font-size: .875rem;
+  font-style: italic;
+}
+
+dt {
+  margin-left: 1rem;
+}
+
+dd {
+  margin-left: 1rem;
+}
+
+.link-card:hover {
+  background-color: #cabdb2;
+}
+
+.btn {
+  display: inline-block;
+  color: #fff;
+  background-color: #785439;
+  font-family: Dosis, sans-serif;
+  font-weight: 700;
+  padding: .75rem;
+  text-align: center;
+  border-radius: 3px;
+}
+
+footer {
+  text-align: center;
 }
